# ahiru-crows-discord-bot

./: .env.example  .gitignore  .pdm-python  LICENSE  bot.py  db.surql  main.py  pyproject.toml
extensions/: lineups.py  test.py  tryout.py
lib/: constants.py  utils.py
